Bug 477739 - Free space dropdown shows empty menu if Filelight is not installed
Summary: Free space dropdown shows empty menu if Filelight is not installed
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 24.01.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-29 23:43 UTC by Timothy B
Modified: 2024-07-08 11:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08.0
Sentry Crash Report:


Attachments
Screenshot of observed bug (9.49 KB, image/png)
2023-11-29 23:43 UTC, Timothy B
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy B 2023-11-29 23:43:05 UTC
Created attachment 163624 [details]
Screenshot of observed bug

SUMMARY
If Filelight is not installed in the system, clicking on the free space button in the status bar on Dolphin would display a tiny popup menu with no items.

STEPS TO REPRODUCE
0. Verify that Filelight is not installed. If it is, uninstall it.
1. Open any Dolphin window
2. Click on the free space button on the status bar. The button text says something like "123.4 GiB free" with a down arrow beside it.

OBSERVED RESULT
A tiny 1x1 pixel blank popup menu appears below the button.

EXPECTED RESULT
Possibly a menu with only an entry that says something like "Install Filelight" would appear.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Dolphin Version: 24.01.80

ADDITIONAL INFORMATION
Filelight is not installed by default in KDE Neon, so this can be easily reproduced when running the live ISO image. After installing Filelight, Dolphin will populate the otherwise empty menu when the free space button is clicked.
Comment 1 Bug Janitor Service 2023-12-11 00:20:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/674
Comment 2 Felix Ernst 2024-05-30 15:35:13 UTC
Git commit 0a8f84a52dcd246550b5ea0e795dd7b309f2ece1 by Felix Ernst, on behalf of Nicolas Fella.
Committed on 30/05/2024 at 15:21.
Pushed by felixernst into branch 'master'.

Offer installing Filelight if no disk usage analyzer was found

This avoids an empty menu and points the user towards a useful tool

M  +12   -1    src/statusbar/statusbarspaceinfo.cpp

https://invent.kde.org/system/dolphin/-/commit/0a8f84a52dcd246550b5ea0e795dd7b309f2ece1
Comment 3 Bug Janitor Service 2024-05-30 16:51:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/783
Comment 4 Felix Ernst 2024-07-08 11:41:59 UTC
Git commit 0d981e7b7df266c867004e23a169ba8cc13c8683 by Felix Ernst.
Committed on 08/07/2024 at 11:41.
Pushed by felixernst into branch 'master'.

Improve Filelight installation UX

Before this commit pressing the free space button when Filelight
is not installed would show a singular action called "Install
Filelight to View Disk Usage Statistics…". Pressing this button
would open the store page for Filelight. This is an okay user
experience, but we can do better.

This commit makes it so pressing the free space button when
Filelight is not installed shows an attractive UI that makes clear
that freeing up disk space can be accomplished nicely by installing
Filelight. The "Install Filelight…" button on this UI is connected
to PackageKit directly, so we do not need to show a separate store
like Discover and instead trigger an installation right then and
there. For this, the recently introduced DolphinPackageInstaller
KJob is used.

Installation progress is reported through the status bar similar to
the progress reporting of slowly loading directories or searches.
Installation failure or success is ultimately shown within Dolphin
as a passive notification above the view.

On Microsoft Windows or when PackageKit is not available, the
install button will only open a store page for Filelight.

M  +1    -0    src/CMakeLists.txt
M  +3    -0    src/config-dolphin.h.cmake
M  +1    -0    src/dolphinviewcontainer.cpp
M  +2    -2    src/global.h
M  +7    -0    src/statusbar/dolphinstatusbar.cpp
M  +7    -0    src/statusbar/dolphinstatusbar.h
M  +98   -11   src/statusbar/statusbarspaceinfo.cpp
M  +32   -0    src/statusbar/statusbarspaceinfo.h

https://invent.kde.org/system/dolphin/-/commit/0d981e7b7df266c867004e23a169ba8cc13c8683