Offer installing Filelight if no disk usage analyzer was found

This avoids an empty menu and points the user towards a useful tool

BUG: 477739